add: our history, edit: flavour amd about sections

--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ p,button {
 .flavour-cards >div{
   width: 366px;
 }
+.history{
+  width: 298px !important;
+}
+.history-desc{
+  background: #1C1814;
+}
